syntax = "proto3";

package com.anzop.todo;

import "google/protobuf/timestamp.proto";

message ChargingConsumerProto {
  string token = 1;
}

message ChargingDeviceProto {
  string deviceId = 1;
  string outletGroupId = 2;
  string deviceCode = 3;
}

message ChargingSessionProto {
  string sessionId = 1;
  google.protobuf.Timestamp startTime = 2;
  google.protobuf.Timestamp endTime = 3;
}

message ChargingEventProto {
  ChargingConsumerProto consumer = 1;
  ChargingDeviceProto device = 2;
  ChargingSessionProto session = 3;
}
