syntax = "proto3";

package com.anzop.evCharger;

import "google/protobuf/timestamp.proto";

message ChargingCustomerProto {
  string customerId = 1;
  string rfidTag = 2;
}

message ChargingOutletProto {
  string outletId = 1;
  string deviceCode = 2;
  string status = 3;
}

message ChargingSessionProto {
  string sessionId = 1;
  ChargingCustomerProto customer = 2;
  ChargingOutletProto outlet = 3;
  string purchaseChannel = 4;
  google.protobuf.Timestamp startTime = 5;
  google.protobuf.Timestamp endTime = 6;
}
